<resources>
    <string name="app_name">PetPet</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="tel">Tel</string>
    <string name="address">Address</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="vet_Id">Vet ID</string>
    <string name="pet_owner">Pet Owner</string>
    <string name="my_dog">My Dog</string>
    <string name="stray_dog">Stray Dog</string>
    <string name="name">Name</string>
    <string name="DOB">Date of Birth</string>
    <string name="age">Age</string>
    <string name="community">Community</string>
    <string name="day">Day</string>
    <string name="rd">Registration Date</string>
    <string name="location">Location</string>
    <string name="vaccine">Vaccine</string>
    <string name="no_data">No data</string>
    <string name="neuter">Neuter</string>
    <string name="create_user">Create Account</string>
    <string name="g_in">General information</string>
    <string name="district">District</string>
    <string name="subdistrict">Sub-District</string>
    <string name="vet">Veterinarian</string>
    <string name="id_num">ID Number</string>
    <string name="next">NEXT</string>
    <string name="guest">GUEST</string>
    <string name="select">Select One</string>
    <string name="or">Or</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="screening">Screening</string>
    <string name="characteristic">Characteristic</string>
    <string name="haircoat">Hair coat</string>
    <string name="Short">Short</string>
    <string name="Long">Long</string>
    <string name="wire">Wire</string>
    <string name="color">Color</string>
    <string name="black">Black</string>
    <string name="white">white</string>
    <string name="brown">Brown</string>
    <string name="gray">Gray</string>

</resources>

