<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cskku.amornpalang.mananchaya.petpet.selectOneActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:layout_width="199dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ff"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <Button
            android:text="@string/my_dog"
            android:layout_width="match_parent"
            android:id="@+id/button7"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textAlignment="gravity" />

        <TextView
            android:text="@string/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_marginTop="20dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="123dp"
            app:srcCompat="@drawable/selectdog"
            android:id="@+id/imageView4"
            android:layout_weight="0.21" />

        <Button
            android:text="@string/stray_dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
